[project]
  name = "pulumi_nebius"
  description = "A Pulumi provider dynamically bridged from nebius."
  dependencies = ["parver>=0.2.1", "pulumi>=3.134.0,<4.0.0", "semver>=2.8.1", "typing-extensions>=4.11; python_version < \"3.11\""]
  readme = "README.md"
  requires-python = ">=3.8"
  version = "0.5.4"
  [project.urls]
    Repository = "https://github.com/nebius/terraform-provider-nebius"

[build-system]
  requires = ["setuptools>=61.0"]
  build-backend = "setuptools.build_meta"

[tool]
  [tool.setuptools]
    [tool.setuptools.package-data]
      pulumi_nebius = ["py.typed", "pulumi-plugin.json"]
