[tool.poetry]
name = "pulumi_nebius"
version = "0.1.0-dev"
description = "A Pulumi provider dynamically bridged from nebius."
readme = "README.md"
authors = ["Bartlomiej Nogas"]
repository = "https://github.com/nebius/terraform-provider-nebius"

[tool.poetry.dependencies]
python = ">=3.8"
parver = ">=0.2.1"
pulumi = ">=3.134.0,<4.0.0"
semver = ">=2.8.1"
typing-extensions = { version = ">=4.11", python = "<3.11" }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
